# rca-agent

./: .gitignore  README.md  config.yaml  pyproject.toml
evaluation/: README.md  batch_openrca_eval.py
evaluation/history/20260123/: baseline_results.csv
examples/: build_causal_graph.py  debug_log_patterns.py  disk_fault_injector.py  example_flamegraph_analysis.py  example_rca_scenario.py  prepare_causal_data.py  run_root_cause_analysis.py  simulate_cpu_bottleneck.py  test_compact_mode.py  test_data_loading.py  test_detect_anomalies.py  test_log_tools.py  test_metric_tools.py  test_query_logs.py  test_trace_tools.py  train_causal_model.py  view_topology.py  view_topology_interactive.py
examples/manual_disk_fault/: README.md  business_app.py  common.py  inject_fault.py  order_service.py  recover_fault.py  setup_disk.py  teardown.py
scripts/: fetch_logs.py
src/: __init__.py
src/agents/: __init__.py  domain_adapter.py  flamegraph_agents.py  flamegraph_config.py  middleware.py  rca_agents.py  rca_config.py
src/causal/: README.md  __init__.py  causal_discovery.py  causal_model.py  data_preprocessor.py  root_cause_inference.py
src/config/: __init__.py  llm_config.py  loader.py
src/openrca_baseline/: api_router.py  controller.py  executor.py  rca_agent.py
src/tools/: __init__.py  base.py  data_loader.py  flamegraph_cpu_analyzer.py  local_log_tool.py  local_metric_tool.py  local_trace_tool.py  log_tool.py  metric_adapter.py  metric_tool.py  trace_tool.py
src/utils/: __init__.py  llm_factory.py  schema.py  streaming_output.py  time_utils.py
(+223 files in other folders)
